<resources>
    <string name="app_name">Horusmap</string>
    <string name="prueba_color">#FFBB86FC</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="empty_msj">No dejes este espacio vacío</string>
    <string name="email">Correo electrónico</string>
    <string name="validm">invalido</string>
    <string name="validf">invalida</string>
    <string name="acept_terms">Debes aceptar los terminos y condiciones para continuar</string>
    <string name="in_msg">Ingresa</string>
    <string name="disease_msg">Tipo de discapcidad visual</string>
    <string name="terms_button"><u>Aceptar Términos y Condiciones</u></string>
    <string name="register_button"><u>Regístrate</u></string>
    <string name="valid_password"><u>Las contraseñas coinciden</u></string>
    <string name="invalid_password"><u>Las contraseñas no coinciden</u></string>
    <string name="terms_validate">Debes aceptar términos y condiciones</string>
    <string name="lorem_text">La aplicación HorusMap es propiedad de Germán Osorio y John Anderson Solano. En esta página se establecen los términos
        y condiciones bajo los cuales puedes usar nuestra aplicación y susservicios. Esta aplicación ofrece a los usuarios un servicio de orientación
        dentro del campus de la Universidad del Quindío en unas rutas específicas.
        El servicio, los diseños, el software, imagenes y texto son de libre utilización ya que creemos en el software libre.
Nos reservamos el derecho de modificar estos términos de vez en cuando a nuestra entera discreción, si no estás de acuerdo con alguno de los términos y
        condiciones no aceptes, no uses o accedas al contenido de la aplicación.
La información recopilada (nombre de usuario, contraseña, correo electrónico y nivel de discapacidad visual) será usada unicamente para cuestiones de
        seguridad de ingreso a la aplicación, de registro de los usuarios y no será difundida, ni vendida por ningún medio o ninguna razón.
En caso de tener alguna duda con respecto a la utilización de la aplicación por favor contactarse al siguiente correo electrónico:
SoporteHorusMap@gmail.com.</string>
    <string name="Logo_horus">TODO</string>
    <string name="finish_edit">Edición finalizada con exito</string>
    <string name="name"><u>Nombre de usuario</u></string>
    <string name="name_d">Nombre generico</string>
    <string name="email_u"><u>Correo electrónico</u></string>
    <string name="email_d">correo@gmail.com</string>
    <string name="vision"><u>Vision</u></string>
    <string name="vision_d">Vision estandar</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="change"><u>Dale click para cambiar tipo de discapacidad visual</u></string>
    <string name="name2">Nombre completo</string>
    <string name="nothing">Ninguna discapacidad visual</string>
    <string name="user_exist">El usuario ya existe</string>


    <string-array name="diseases">
        <item>Ceguera</item>
        <item>Deterioro visual leve</item>
        <item>Deterioro visual moderado</item>
        <item>Deterioro visual grave</item>
    </string-array>
    <string-array name="comand_confi">
        <item>confi</item>
        <item>configuración</item>
        <item>presiona configuración</item>
        <item>presione configuración</item>
        <item>ir a configuración</item>
        <item>pantalla de configuración</item>
    </string-array>
    <string-array name="comand_route">
        <item>route</item>
        <item>iniciar ruta</item>
        <item>presiona iniciar ruta</item>
        <item>presione iniciar ruta</item>
        <item>ir a iniciar ruta</item>
        <item>rutas</item>
        <item>navegación exterior</item>
        <item>navegacion</item>
        <item>navegación</item>
        <item>ir a navegación exterior</item>
    </string-array>
    <string-array name="comand_logout">
        <item>cerrar sesión</item>
        <item>presiona cerrar sesión</item>
        <item>presione cerrar sesión</item>
        <item>ir a cerrar sesión</item>
        <item>cierra sesión</item>
    </string-array>
    <string-array name="comand_sos">
        <item>emergencia</item>
        <item>presiona emergencia</item>
        <item>presione emergencia</item>
        <item>ir a emergencia</item>
        <item>ayuda</item>
        <item>necesito ayuda</item>
        <item>Necesito ayuda</item>
        <item>tengo una emergencia</item>
    </string-array>
    <string-array name="comand_back">
        <item>volver</item>
        <item>Volver</item>
        <item>vulve</item>
        <item>Regresar</item>
        <item>regresar</item>
        <item>presiona volver</item>
        <item>presione volver</item>
        <item>ir a pantalla anterior</item>
    </string-array>
    <string-array name="comand_off">
        <item>off</item>
        <item>cerrar aplicación</item>
        <item>Cerrar aplicación</item>
        <item>presiona cerrar aplicación</item>
        <item>presione cerrar aplicación</item>
        <item>cierra esta aplicación</item>
    </string-array>
    <string-array name="comand_profile">
        <item>perfíl</item>
        <item>Perfíl</item>
        <item>Perfil</item>
        <item>perfil</item>
        <item>ir a perfíl</item>
        <item>ir a perfil</item>
        <item>pantalla de perfil</item>
        <item>presiona perfíl</item>
        <item>pantalla de perfíl</item>
        <item>presiona perfil</item>
        <item>opción perfíl</item>
        <item>opción perfil</item>

    </string-array>
    <string-array name="comand_interior">
        <item>Navegación interior</item>
        <item>navegación interior</item>
        <item>navegacion interior</item>
        <item>Navegacion interior</item>
        <item>abrir navegación interior</item>
        <item>Abrir navegación interior</item>
        <item>abre navegación interior</item>
        <item>ir a navegación interior</item>
        <item>estoy adentro</item>
        <item>Estoy adentro</item>
        <item>ya estoy en la facultad</item>
    </string-array>

    <string-array name="comand_edit">
        <item>editar información</item>
        <item>Editar información</item>
        <item>Actualizar información</item>
        <item>actualizar información</item>
        <item>ir a editar perfil</item>
        <item>Ir a editar perfíl</item>
        <item>Abre editar perfíl</item>
        <item>abre editar perfil</item>
        <item>editar</item>
        <item>abre editar</item>
        <item>editar perfil</item>
        <item>editar perfíl</item>
        <item>abre actualizar información</item>
    </string-array>

    <string-array name="comand_question">
        <item>Preguntas frecuentes</item>
        <item>preguntas frecuentes</item>
        <item>ir a preguntas frecuentes</item>
        <item>pantalla de preguntas</item>
        <item>pantalla de preguntas frecuentes</item>
        <item>presiona preguntas frecuentes</item>
        <item>tengo una duda</item>
        <item>necesito información</item>
        <item>preguntas</item>
    </string-array>

    <string-array name="comand_alert">
        <item>configurar alertas</item>
        <item>abrir configuración de alertas</item>
        <item>configuración de alertas</item>
        <item>modificar alertas</item>
        <item>Modificar alertas</item>
        <item>Abrir configuración de alertas</item>
        <item>alertas</item>
        <item>alerta</item>
        <item>Alerta</item>
        <item>Alertas</item>
        <item>actualizar alertas</item>
    </string-array>

    <string-array name="comand_finish">
        <item>terminar</item>
        <item>Terminar</item>
        <item>guardar</item>
        <item>Guardar</item>
        <item>Finalizar</item>
        <item>finalizar</item>
        <item>ir a terminar</item>
        <item>presiona terminar</item>
        <item>Presionar terminar</item>
    </string-array>

    <string-array name="comand_rute2">
        <item>ir a ingeniería</item>
        <item>quiero ir a ingeniería</item>
        <item>ingeniería</item>
        <item>ingenieria</item>
        <item>ruta portería ingeniería</item>
        <item>Ingeniería</item>
    </string-array>

    <string-array name="comand_rute1">
        <item>ir a porteria</item>
        <item>ir a portería</item>
        <item>quiero ir a porteria</item>
        <item>porteria</item>
        <item>portería</item>
        <item>ruta portería porteria</item>
        <item>Porteria</item>
        <item>Portería</item>
    </string-array>

    <string-array name="comand_sonidos">
    <item>configurar alertas sonoras</item>
    <item>configurar sonidos</item>
    <item>alertas de sonido</item>
    <item>Alertas de sonido</item>
    <item>Notificaciones de sonido</item>
    <item>notificaciones de sonido</item>
    <item>sonidos</item>
    <item>Sonidos</item>
    <item>configuración de sonidos</item>
    </string-array>

    <string-array name="comand_activated">
        <item>activar</item>
        <item>Activar</item>
        <item>presiona activar</item>
        <item>Presiona activar</item>
    </string-array>

    <string-array name="comand_noactivated">
        <item>desactivar</item>
        <item>Desactivar</item>
        <item>presiona desactivar</item>
        <item>Presiona desactivar</item>

    </string-array>
    <string name="title_activity_start_route">StartRouteActivity</string>
    <string name="questions">¿Preguntas?</string>
    <string name="settings">Configuración</string>
    <string name="profile">Perfíl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Navegación</string>
    <string name="navegation_out">Navegación Exterior</string>
    <string name="choice_route">Escoge una ruta</string>
    <string name="title_terms">Términos y condiciones</string>
    <string name="sos_number">123</string>
    <string-array name="routes">
        <item>Porteria a Facultad de ingenieria</item>
        <item>Facultad de ingenieria a porteria</item>
        <item>Navegación Interna</item>
    </string-array>
    <string name="Alertas">Las alertas son mensajes que se mostrarán en la parte inferior de la
        pantalla a medida que usted se desplace por la ruta seleccionada. Por defecto las alertas
    ya se encuentran activadas</string>
    <string name="Sonidos">Las alertas sonoras son tonos cortos que notificarán alguna novedad
    en su ruta seleccionada. Por defecto las alertas sonoras ya se encuentran desactivadas, pero puede
    desactivarlas cuando lo desee en el siguiente selector.</string>
    <string name="actual_level"><u>Nivel actual</u></string>
    <string name="level1">Primer Nivel</string>
    <string name="level2">Segundo Nivel</string>
    <string name="level3">Tercer Nivel</string>
    <string name="level4">Cuarto Nivel</string>
    <string name="facult">Facultad de Ingeniería</string>
    <string name="close_places"><u>Lugares cercanos</u></string>
    <string name="inge1">Oficina IEEE.\n Escaleras aulas 101 a la 103.\n Escaleras al nivel dos.\n</string>
    <string name="inge2">Decanatura de ingeniería.\n Oficina de ingeniería Civil.\n Aulas de diseño.\n</string>
    <string name="inge3">Oficina de Ingeniería Electrónica.\nLaboratorio de telemática.\nOficina de Ingeniería de sistemas.\n</string>
    <string name="inge4">Aulas cuarto piso.\nLaboratorio de Electrónica.\nUnidad de Extension.\n</string>
    <string name="end_route">Terminar Ruta</string>

</resources>