<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_height="match_parent"
android:background="@color/greenhorus">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ProfileFragment">

        <ImageView
            android:id="@+id/horus_icon"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="550dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_horus_eye_edit" />

        <TextView
            android:id="@+id/textView_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/quicksand_light"
            android:text="Perfil"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/horus_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/horus_icon"
            app:layout_constraintTop_toTopOf="@+id/horus_icon" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="54dp"
            android:background="@drawable/custom_imput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_perfil"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/person_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="290dp"
            android:layout_marginBottom="400dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_person"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="90dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/email_icon"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/person_icon"
            app:layout_constraintTop_toTopOf="@+id/person_icon" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="275dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/person_icon"
            app:layout_constraintStart_toStartOf="@+id/person_icon"
            app:layout_constraintTop_toBottomOf="@+id/person_icon"
            app:srcCompat="@drawable/ic_email_dark"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="104dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/email_u"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/horus2_icon"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/email_icon"
            app:layout_constraintTop_toTopOf="@+id/email_icon" />

        <TextView
            android:id="@+id/email_profile1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/email_d"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/horus2_icon"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/email_text_view"
            app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

        <ImageView
            android:id="@+id/horus2_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="140dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/email_icon"
            app:layout_constraintStart_toStartOf="@+id/email_icon"
            app:layout_constraintTop_toBottomOf="@+id/email_icon"
            app:srcCompat="@drawable/ic_horus_eye_edit"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/vision_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="196dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/vision"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/horus2_icon"
            app:layout_constraintTop_toTopOf="@+id/horus2_icon" />

        <TextView
            android:id="@+id/vision_profile1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/vision_d"
            android:textColor="@color/black"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vision_text_view"
            app:layout_constraintTop_toBottomOf="@+id/vision_text_view" />

        <Button
            android:id="@+id/out_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="26dp"
            android:textStyle="bold"
            android:visibility="visible"
            app:icon="@drawable/ic_logout_red"
            app:iconPadding="0sp"
            app:iconTint="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/horus2_icon" />


        <Button
            android:id="@+id/edit_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/transparent"
            app:icon="@drawable/ic_edit"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/horus_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_profile1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:background="@color/transparent"
            android:enabled="false"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/user"
            android:textColor="@color/black"
            android:textSize="22dp"
            app:layout_constraintBottom_toTopOf="@+id/email_icon"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>