<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray2"
    android:backgroundTint="@color/gray2"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icono_horus"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="120dp"
            android:contentDescription="@string/Logo_horus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_horusicon_round" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="56dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/red"
            app:helperText="Ingrese un usuario"
            app:helperTextTextColor="@color/gray_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icono_horus"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/custom_imput"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:textColorHint="@color/gray_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/red"
            app:helperText="Ingrese su contraseña"
            app:helperTextTextColor="@color/gray_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/custom_imput"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textColor="@color/gray_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/custom_boton"
            android:text="ENTRAR"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="130dp"
            android:fontFamily="@font/quicksand_light"
            android:text="¿ No tienes una cuenta ?"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="7"
            android:layout_marginStart="2dp"
            android:background="@color/transparent"
            android:freezesText="false"
            android:text="@string/register_button"
            android:textAlignment="textStart"
            android:textColor="@color/greenhorus"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ImageButton
            android:id="@+id/facebook_button"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="120dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/custom_facebook" />

        <ImageButton
            android:id="@+id/google_button"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_button"
            app:layout_constraintStart_toEndOf="@+id/facebook_button"
            app:layout_constraintTop_toTopOf="@+id/facebook_button"
            app:srcCompat="@drawable/custom_google" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>